tests/baselines/reference/ES5SymbolProperty4.errors.txt
ES5SymbolProperty4.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: string; }'.


==== ES5SymbolProperty4.ts (1 errors) ====
    var Symbol: { iterator: string };
        ~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: string; }'.
!!! related TS6203 lib.es2015.symbol.d.ts:--:--: 'Symbol' was also declared here.
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]